syntax = "proto3";
package author;

// Définition du message Author
message Author {
  string id = 1;
  string name = 2;
}

// Définition des messages de requête et de réponse pour les méthodes
message GetAuthorRequest {
  string author_id = 1;
}

message GetAuthorResponse {
  Author author = 1;
}

message SearchAuthorsRequest {
  string query = 1;
}

message SearchAuthorsResponse {
  repeated Author authors = 1;
}

// Définition du service d'auteurs
service AuthorService {
  rpc GetAuthor(GetAuthorRequest) returns (GetAuthorResponse);
  rpc SearchAuthors(SearchAuthorsRequest) returns (SearchAuthorsResponse);
  // Ajouter d'autres méthodes au besoin
}
